Chief Adviser Section added

--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
                 </div>
             </div>
         </div>
+        <section class="adviser-container fira-sans">
+            <div class="adviser">
+                <p class="description"> 
+                    Dr. Muhammad Yunus is a visionary Bangladeshi social entrepreneur, economist, and the founder of the Grameen Bank. 
+                    He pioneered the concept of microcredit and microfinance, empowering millions of people, especially women, to break the 
+                    cycle of poverty through small loans and sustainable entrepreneurship. His innovative approach has transformed 
+                    lives worldwide and earned him the Nobel Peace Prize in 2006. Dr. Yunus continues to inspire global efforts for social 
+                    and economic development.
+                </p>
+                <h3 class="adviser-name">Dr. Muhammad Yunus</h3>
+                <p class="adviser-title">Chief Adviser of the People's Republic of Bangladesh</p>
+            </div>
+        </section>
     </main>
 </body>
 
