added a opinion matters section

--- a/index.html
+++ b/index.html
@@ -89,6 +89,33 @@
                 <p class="adviser-title">Chief Adviser of the People's Republic of Bangladesh</p>
             </div>
         </section>
+        <section class="opinion-container fira-sans">
+            <h1 class="title">Your Opinion Matters</h1>
+            <div class="opinion-content">
+                <div class="questions-and-opinion-title">
+                    <h4> Questions </h4>
+                    <h4> Select Your Opinion </h4>
+                </div>
+                <div class="questions-and-opinion">
+                    <p>Do you believe Bangladesh is on the right path toward becoming a developed nation?</p>
+                    <div>
+                        <button>Yes, I Agree <img width="15px" src="./assets/arrow-down-icon.png" alt=""></button>
+                    </div>
+                </div>
+                <div class="questions-and-opinion">
+                    <p>Do you think sustainable development is being prioritized effectively in Bangladesh?</p>
+                    <div>
+                        <button>Yes, I Agree <img width="15px" src="./assets/arrow-down-icon.png" alt=""></button>
+                    </div>
+                </div>
+                <div class="questions-and-opinion">
+                    <p>Should there be more focus on technology and innovation in future plans?</p>
+                    <div>
+                        <button>Yes, I Agree <img width="15px" src="./assets/arrow-down-icon.png" alt=""></button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
