--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <h1 class="title">Pillars of "Bangladesh 2.0"</h1>
             <div class="pillars">
                 <div class="pillar">
-                  <img src="./assets/card-icon.png" alt="">
-                  <h4 class="pillar-title">Innovation</h4>
-                  <p class="pillar-description">Encouraging creativity and new technologies to drive progress.</p>
+                    <img src="./assets/card-icon.png" alt="">
+                    <h4 class="pillar-title">Innovation</h4>
+                    <p class="pillar-description">Encouraging creativity and new technologies to drive progress.</p>
                 </div>
                 <div class="pillar">
                     <img src="./assets/card-icon.png" alt="">
@@ -54,12 +54,16 @@
         </div>
         <div class="vision-container fira-sans">
             <h1 class="vision-title">The Vision of Future</h1>
-            <p class="vision-des">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <p class="vision-des">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge
+                technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable
+                energy, digital transformation, and robust infrastructure, the country is set to become a global model
+                of development.</p>
             <div class="cards">
                 <div class="card1">
                     <img src="./assets/card-icon.png" alt="">
                     <h2>Digital Transformation</h2>
-                    <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all
+                        citizens.</p>
                     <button class="btn">Learn More</button>
                 </div>
                 <div class="card2">
@@ -71,18 +75,23 @@
                 <div class="card3">
                     <img src="./assets/card-icon.png" alt="">
                     <h2>Modern Infrastructure</h2>
-                    <p>Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <p>Building state-of-the-art infrastructure to support economic growth and global competitiveness.
+                    </p>
                     <button class="btn">Learn More</button>
                 </div>
             </div>
         </div>
         <section class="adviser-container fira-sans">
             <div class="adviser">
-                <p class="description"> 
-                    Dr. Muhammad Yunus is a visionary Bangladeshi social entrepreneur, economist, and the founder of the Grameen Bank. 
-                    He pioneered the concept of microcredit and microfinance, empowering millions of people, especially women, to break the 
-                    cycle of poverty through small loans and sustainable entrepreneurship. His innovative approach has transformed 
-                    lives worldwide and earned him the Nobel Peace Prize in 2006. Dr. Yunus continues to inspire global efforts for social 
+                <p class="description">
+                    Dr. Muhammad Yunus is a visionary Bangladeshi social entrepreneur, economist, and the founder of the
+                    Grameen Bank.
+                    He pioneered the concept of microcredit and microfinance, empowering millions of people, especially
+                    women, to break the
+                    cycle of poverty through small loans and sustainable entrepreneurship. His innovative approach has
+                    transformed
+                    lives worldwide and earned him the Nobel Peace Prize in 2006. Dr. Yunus continues to inspire global
+                    efforts for social
                     and economic development.
                 </p>
                 <h3 class="adviser-name">Dr. Muhammad Yunus</h3>
@@ -113,6 +122,55 @@
                     <div>
                         <button>Yes, I Agree <img width="15px" src="./assets/arrow-down-icon.png" alt=""></button>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="news-container fira-sans">
+            <h1>Recent News</h1>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting
+                inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital
+                transformation, and robust infrastructure, the country is set to become a global model of development.
+            </p>
+            <div class="news-card">
+                <div>
+                    <img class="img" src="./assets/satelite.png" alt="">
+                </div>
+                <div class="news-card-box">
+                    <h2 class="news-card-title">Bangladesh Launches New Satellite</h2>
+                    <img style="margin: 8px 0px;" src="./assets/al-jazeera.png" alt="">
+                    <p class="news-card-time">Date: 05/01/2025 Time: 10.25 PM</p>
+                    <p class="news-card-description">Not until the creation and maintenance of decent conditions of life for all people are recognized and 
+                    accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="btn">Read More</button>
+                </div>
+            </div>
+            <div class="news-card-reverse">
+                <div>
+                    <img class="img" src="./assets/satelite.png" alt="">
+                </div>
+                <div class="news-card-box">
+                    <h2 class="news-card-title">Bangladesh Launches New Satellite</h2>
+                    <img style="margin: 8px 0px;" src="./assets/al-jazeera.png" alt="">
+                    <p class="news-card-time">Date: 05/01/2025 Time: 10.25 PM</p>
+                    <p class="news-card-description">Not until the creation and maintenance of decent conditions of life for all people are recognized and 
+                    accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="btn">Read More</button>
+                </div>
+            </div>
+            <div class="news-card">
+                <div>
+                    <img class="img" src="./assets/satelite.png" alt="">
+                </div>
+                <div class="news-card-box">
+                    <h2 class="news-card-title">Bangladesh Launches New Satellite</h2>
+                    <img style="margin: 8px 0px;" src="./assets/al-jazeera.png" alt="">
+                    <p class="news-card-time">Date: 05/01/2025 Time: 10.25 PM</p>
+                    <p class="news-card-description">Not until the creation and maintenance of decent conditions of life for all people are recognized and 
+                    accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="btn">Read More</button>
                 </div>
             </div>
         </section>
