--- a/index.html
+++ b/index.html
@@ -174,6 +174,30 @@
                 </div>
             </div>
         </section>
+        <section class="donate fira-sans">
+            <h1 class="title">Donate Today</h1>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. <br> With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+            <div class="donation-options">
+                <div>
+                    <h2>100 Taka</h2>
+                </div>
+                <div style="background: #c6e4d6;">
+                    <h2>200 Taka</h2>
+                </div>
+                <div>
+                    <h2>500 Taka</h2>
+                </div>
+                <div>
+                    <h2>1000 Taka</h2>
+                </div>
+            </div>
+            <div class="donations">
+                <input type="text" class="custom-donation" placeholder="Other Amount (Taka)" />
+            </div>
+            <div class="btn">
+                <button>Done Now</button>
+            </div>
+        </section>
     </main>
 </body>
 
