added a newsletter section

--- a/index.html
+++ b/index.html
@@ -198,6 +198,15 @@
                 <button>Done Now</button>
             </div>
         </section>
+        <section class="newsletter-section fira-sans">
+            <h1>Subscribe Newsletter</h1>
+            <p class="newsletter-des">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology, promoting inclusive growth.</p>
+            <form class="newsletter-form">
+                <input class="email-input" type="email" name="" placeholder="Enter your email here" id="">
+                <input class="subscribe-button" type="submit" value="Subscribe">
+            </form>
+            <p class="newsletter-note">We promise not to spam you!</p>
+        </section>
     </main>
 </body>
 
