added a footer section

--- a/index.html
+++ b/index.html
@@ -139,9 +139,10 @@
                     <h2 class="news-card-title">Bangladesh Launches New Satellite</h2>
                     <img style="margin: 8px 0px;" src="./assets/al-jazeera.png" alt="">
                     <p class="news-card-time">Date: 05/01/2025 Time: 10.25 PM</p>
-                    <p class="news-card-description">Not until the creation and maintenance of decent conditions of life for all people are recognized and 
-                    accepted as a common obligation of all people and all countries—not until then shall we,
-                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <p class="news-card-description">Not until the creation and maintenance of decent conditions of life
+                        for all people are recognized and
+                        accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
                     <button class="btn">Read More</button>
                 </div>
             </div>
@@ -153,9 +154,10 @@
                     <h2 class="news-card-title">Bangladesh Launches New Satellite</h2>
                     <img style="margin: 8px 0px;" src="./assets/al-jazeera.png" alt="">
                     <p class="news-card-time">Date: 05/01/2025 Time: 10.25 PM</p>
-                    <p class="news-card-description">Not until the creation and maintenance of decent conditions of life for all people are recognized and 
-                    accepted as a common obligation of all people and all countries—not until then shall we,
-                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <p class="news-card-description">Not until the creation and maintenance of decent conditions of life
+                        for all people are recognized and
+                        accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
                     <button class="btn">Read More</button>
                 </div>
             </div>
@@ -167,21 +169,24 @@
                     <h2 class="news-card-title">Bangladesh Launches New Satellite</h2>
                     <img style="margin: 8px 0px;" src="./assets/al-jazeera.png" alt="">
                     <p class="news-card-time">Date: 05/01/2025 Time: 10.25 PM</p>
-                    <p class="news-card-description">Not until the creation and maintenance of decent conditions of life for all people are recognized and 
-                    accepted as a common obligation of all people and all countries—not until then shall we,
-                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <p class="news-card-description">Not until the creation and maintenance of decent conditions of life
+                        for all people are recognized and
+                        accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
                     <button class="btn">Read More</button>
                 </div>
             </div>
         </section>
         <section class="donate fira-sans">
             <h1 class="title">Donate Today</h1>
-            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. <br> With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting
+                inclusive growth, and ensuring sustainability. <br> With initiatives in renewable energy, digital
+                transformation, and robust infrastructure.</p>
             <div class="donation-options">
                 <div>
                     <h2>100 Taka</h2>
                 </div>
-                <div style="background: #c6e4d6;">
+                <div class="background">
                     <h2>200 Taka</h2>
                 </div>
                 <div>
@@ -200,7 +205,8 @@
         </section>
         <section class="newsletter-section fira-sans">
             <h1>Subscribe Newsletter</h1>
-            <p class="newsletter-des">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br> technology, promoting inclusive growth.</p>
+            <p class="newsletter-des">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge
+                <br> technology, promoting inclusive growth.</p>
             <form class="newsletter-form">
                 <input class="email-input" type="email" name="" placeholder="Enter your email here" id="">
                 <input class="subscribe-button" type="submit" value="Subscribe">
@@ -208,6 +214,14 @@
             <p class="newsletter-note">We promise not to spam you!</p>
         </section>
     </main>
+    <footer class="fira-sans">
+        <h1>Bangladesh 2.0</h1>
+        <div class="contact">
+            <img src="./assets/facebook.png" alt="">
+            <img src="./assets/instagram.png" alt="">
+            <img src="./assets/x.png" alt="">
+        </div>
+    </footer>
 </body>
 
 </html>
